css/style.css
body, html {
    width: 100%;
    overflow-x: hidden;
    font-family: "Open Sans", sans-serif;
    text-align: left;
    -webkit-overflow-scrolling: auto; /* lets it scroll lazy */
}

h1, h2 {
    line-height: 140%;
    color: #333333;
}

h1 {
    font-size: 44px;
    margin: 0 auto;
}

h2 {
    font-size: 36px;
}

.font-light {
    font-weight: 300;
}

.bold {
    font-weight: 500;
}

.margin-bottom-big {
    margin-bottom: 80px;
}

p, a {
    font-size: 18px;
    font-weight: 300;
}

a,
a:hover,
a:visited,
a:active {
    text-decoration: none;
}

.no-padding {
    padding: 0 !important;
}

.no-padding-bottom {
    padding-bottom: 0
}

.underlined {
    text-decoration: underline;
}

.navbar-toggle {
    margin: 30px;
}

.header {
    width: 100%;
    position: relative;
    z-index: 3;
}

.header.header--clone {
    position: fixed;
    top: 0;
    left: 0;

    -webkit-transform: translateY(-100%);
    -ms-transform: translateY(-100%);
    transform: translateY(-100%);

    -webkit-transition: all 300ms ease-in-out;
    -moz-transition: all 300ms ease-in-out;
    transition: all 300ms ease-in-out;
}

.header.header--stick {
    -webkit-transform: translateY(0%);
    -ms-transform: translateY(0%);
    transform: translateY(0%);
}

.header.header--stick .navbar .content {
    background: #FFFFFF;
    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1), 0 4px 40px rgba(0, 0, 0, 0.05);
    /*padding: 0;*/
}

.header.header--stick .navbar.navbar-default .navbar-brand > .menu-item {
    color: #333333 !important;
}

.navbar.navbar-default .navbar-brand {
    margin-left: 0;
    padding-left: 0;
}

.navbar {
    background-color: transparent;
    padding-top: 0;
    border: none;
    transition: top .3s ease-in-out;
    margin-bottom: 0;
}

.navbar.navbar-default {
    background: transparent;
}

.navbar.navbar-default .navbar-brand {
    padding: 0;
    display: flex;
    align-items: center;
    margin: 32px 0;
    font-weight: 400;
    color: #2F80ED !important;
    height: auto;
}

.navbar.navbar-default .navbar-brand > .menu-item {

}

.nav.navbar-nav {
    margin: 0 auto;
    padding: 0;
}

.nav.navbar-nav.navbar-right > li > a.menu-item > img {
    height: 20px;
}
.nav.navbar-nav.navbar-right > li > a.menu-item > p {
    color: #FFFFFF;
    vertical-align: middle;
    display: inline-block;
    margin: 0;
}

.header--clone .nav.navbar-nav.navbar-right > li > a.menu-item > p {
    color: #000;
}

.navbar-nav > li, .navbar-nav {
    float: left !important;
}

.navbar-right {
    float: right !important;
}

.nav.navbar-nav.navbar-right > li > a.menu-item:link,
.nav.navbar-nav.navbar-right > li > a.menu-item:hover,
.nav.navbar-nav.navbar-right > li > a.menu-item:visited,
.nav.navbar-nav.navbar-right > li > a.menu-item:active {
    text-decoration: none
}

.nav.navbar-nav.navbar-right > li > a > img {
    vertical-align: middle;
}

.no-side-padding {
    padding-right: 0 !important;
    padding-left: 0 !important;
}

.no-side-margin {
    margin-left: 0 !important;
    margin-right: 0 !important;
}

.no-bottom-margin {
    margin-bottom: 0 !important;
}

.ordinary-line-height {
    line-height: 100%;
}

.display-table {
    display: table !important;
}

.type-it {
    color: #00A8D0;
    white-space: pre-wrap;
    max-width: 100%;
    font-size: 26px;
}

.slide-2 {
    height: 100vh;
    background: linear-gradient(90deg, #00BCD4 16.44%, #8BC34A 84.5%);
    display: flex;
    float: left;
    width: 100%;
    flex-direction: column;
    position: relative;
    min-height: 840px;
}

.slide-2 .background .rect {
    height: 52%;
}

.slide-2, .slide-3 {
    background: linear-gradient(270deg, #00BCD4 16.44%, #8BC34A 84.5%);
}

.slide-2 ol {
    margin-top: 25px;
}
.slide-2 ol li,
.slide-2 ol li h3 {
    font-size: 32px;
    font-family: 'Kanit', sans-serif;
    color: #C4C4C4;
}

.slide-2 li h3 {
    margin: 0;
    line-height: 1;
}

.slide-2 li p {
    font-size: 15px;
    line-height: 23px;
    color: #C4C4C4;
    /*opacity: .6;*/
    font-family: 'Open Sans', sans-serif;
    font-weight: 300;
}
.slide-2 li p > a {
    color: #C4C4C4;
    display: inline-block;
    text-decoration: none;
    position: relative;
    cursor: pointer;
}

.slide-2 ol li.active,
.slide-2 ol li.active h3,
.slide-2 ol li.active p > a {
    color: #00BCD4;
    transition: .1s ease-in-out;
}

.slide-2 ol li.active p {
    color: #333333;
}

.slide-2 ol li:hover p {
    color: #333333;
}
.slide-2 ol li:hover,
.slide-2 ol li:hover h3,
.slide-2 ol li:hover p > a  {
    color: #8BC34A;
    cursor: pointer;
}

/*effect-underline*/
.slide-2 ol li p > a:after {
    content: '';
    position: absolute;
    left: 0;
    display: inline-block;
    height: 1em;
    width: 100%;
    border-bottom: 1px solid;
    margin-top: 10px;
    opacity: 0;
    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
    transition: opacity 0.35s, transform 0.35s;
    -webkit-transform: scale(0,1);
    transform: scale(0,1);
}

.slide-2 ol li:hover p > a:after {
    opacity: 1;
    -webkit-transform: scale(1);
    transform: scale(1);
}

.slide-3 {
    padding: 0 0 75px;
}

.slide-3 .content {
    /*margin: 72px auto 50px;*/
    margin: 0 auto;
    display: flex;
    justify-content: center;
    /*width: 80%;*/
}

.slide-3 {
    margin-top: -80px;
    padding-bottom: 60px;
}

.slide-3 .background {
    display: flex;
    align-items: flex-end;
    height: 599px;
}

.slide-3 .background .rect {
    height: calc(599px - 33vh);
    width: 100%;
}

.slide-3 .introduction-msg {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
    width: 33%;
    height: 100%;
    padding: 80px 0;
}
/* ... */

